Update config file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=translation-project-manager-api
 
 ## Datasource config
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://26.34.26.212:5432/translation-project-manager
+spring.datasource.url=jdbc:postgresql://localhost:5432/translation-project-manager
 spring.datasource.username=postgres
 spring.datasource.password=1qaz@WSX
 spring.jpa.hibernate.ddl-auto=update
