Add Dockerfile and docker-compose.yml, configure request caching

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
       matching-strategy: ant-path-matcher
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/translation-project-manager
-    username: postgres
+    url: jdbc:postgresql://localhost:5432/tpm-api
+    username: tpm-api
     password: 1qaz@WSX
   redis:
     database: 0
@@ -20,6 +20,9 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+server:
+  port: 8081
+
 app:
   sil-international:
     client:
@@ -27,3 +30,10 @@ app:
       names-url: https://iso639-3.sil.org/sites/iso639-3/files/downloads/iso-639-3_Name_Index.tab
       macrolanguages-url: https://iso639-3.sil.org/sites/iso639-3/files/downloads/iso-639-3-macrolanguages.tab
       retirements-url: https://iso639-3.sil.org/sites/iso639-3/files/downloads/iso-639-3_Retirements.tab
+  cache:
+    countries:
+      name: countries-cache
+      ttl: 86400
+    languages:
+      name: languages-cache
+      ttl: 86400
