--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -18,14 +18,14 @@ input {
 filter {
     if [type] == "syslog" {
         mutate {
-            add_field => { "instance_name" => "%{app_name}-%{host}:%{app_port}" }
+            add_field => { "instance_name" => "${app_name}-${host}:${app_port}" }
         }
     }
 }
 
 output {
     elasticsearch {
-        hosts => ["elasticsearch:9200"]
-        index => "logs-%{+YYYY.MM.dd}"
+        hosts => ["${elasticsearch.hosts}"]
+        index => "tpm-logs-%{+YYYY.MM.dd}"
     }
 }
