--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: '@spring.profiles.active@'
   application:
     name: translation-project-manager-api
   mvc:
@@ -10,7 +12,6 @@ spring:
     username: tpm-api
     password: 1qaz@WSX
   redis:
-    database: 0
     host: localhost
     port: 6379
     password: 1qaz@WSX
@@ -20,8 +21,7 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-server:
-  port: 8081
+
 
 app:
   sil-international:
