Added config for no-docker debug. Added correlation and scope id's for logging

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -26,6 +26,6 @@ filter {
 output {
     elasticsearch {
         hosts => ["${elasticsearch.hosts}"]
-        index => "tpm-logs-%{+YYYY.MM.dd}"
+        index => "tpm-api-log-%{logger_name}-%{+YYYY.MM.dd}"
     }
 }
