Fix build and logging. Fix request to countries API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   application:
     container_name: application
     build:
-      context: application-server
-      dockerfile: application-server/Dockerfile
+      context: .
+      dockerfile: ./Dockerfile
       args:
         SPRING_PROFILES_ACTIVE: dev
     links:
