--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -26,6 +26,6 @@ filter {
 output {
     elasticsearch {
         hosts => ["${elasticsearch.hosts}"]
-        index => "tpm-api-log-%{logger_name}-%{+YYYY.MM.dd}"
+        index => "${app_name}-log-%{+YYYY.MM.dd}"
     }
 }
