Add caching and full logging to countries and currencies

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,6 @@ app:
     languages:
       name: languages-cache
       ttl: 86400
+    currencies:
+      name: currencies-cache
+      ttl: 86400
