Add full logging and cahcing for client types

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,3 +38,9 @@ app:
     currencies:
       name: currencies-cache
       ttl: 86400
+    client-types:
+      name: client-types-cache
+      ttl: 86400
+    clients:
+      name: clients-cache
+      ttl: 86400
