--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
   db:
     image: "postgres:alpine"
     container_name: db
+    ports:
+      - "5432:5432"
     expose:
       - "5432"
     networks:
@@ -75,6 +77,8 @@ services:
   pgadmin:
     image: "dpage/pgadmin4"
     container_name: pgadmin
+    ports:
+      - "8085:80"
     expose:
       - "80"
     networks:
