Add user details service. Add team member service implementation

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,3 +36,10 @@ app:
       access-key: admin
       secret-key: 1qaz@WSX
       bucket-name: tpm
+
+elastic:
+  apm:
+    server-url: http://apm-server:8200
+
+keycloak:
+  auth-server-url: http://auth.tpm.localhost/auth
