--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -1,40 +1,46 @@
 databaseChangeLog:
   - include:
-      file: initial-schema/001-initial-schema-accuracy.yml
+      file: initial-schema/000-initial-schema-accuracy.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/002-initial-schema-industry.yml
+      file: initial-schema/001-initial-schema-industry.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/003-initial-schema-unit.yml
+      file: initial-schema/002-initial-schema-unit.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/004-initial-schema-client-type.yml
+      file: initial-schema/003-initial-schema-client-type.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/005-initial-schema-client.yml
+      file: initial-schema/004-initial-schema-client.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/006-initial-schema-project.yml
+      file: initial-schema/005-initial-schema-project.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/007-initial-schema-team-member.yml
+      file: initial-schema/006-initial-schema-team-member.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/008-initial-schema-priority.yml
+      file: initial-schema/007-initial-schema-priority.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/009-initial-schema-task.yml
+      file: initial-schema/008-initial-schema-task.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/010-initial-schema-expense-category.yml
+      file: initial-schema/009-initial-schema-expense-category.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/011-initial-schema-expense.yml
+      file: initial-schema/010-initial-schema-expense.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/012-initial-schema-file.yml
+      file: initial-schema/011-initial-schema-file.yml
       relativeToChangelogFile: true
   - include:
-      file: initial-schema/013-initial-schema-threads.yml
+      file: initial-schema/012-initial-schema-threads.yml
+      relativeToChangelogFile: true
+  - include:
+      file: initial-schema/013-initial-schema-service-type.yml
+      relativeToChangelogFile: true
+  - include:
+      file: initial-schema/014-initial-schema-default-dictionaries.sql
       relativeToChangelogFile: true
