--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,13 +25,12 @@ app:
       ttl: 86400
     - name: clients-cache
       ttl: 86400
-
-keycloak:
-  realm: tpm
-  auth-server-url: http://localhost:8081
-  resource: tpm-backend
-  credentials:
-    secret: euRH66K7xvH2xkVtYE91GBAUG7J0KFfc
+  keycloak:
+    realm: tpm
+    auth-server-url: https://localhost:8082
+    resource: tpm-backend
+    credentials:
+      secret: euRH66K7xvH2xkVtYE91GBAUG7J0KFfc
 
 server:
   port: 8080
@@ -68,7 +67,11 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:8081/realms/tpm/protocol/openid-connect/certs
+          jwk-set-uri: https://localhost:8082/realms/tpm/protocol/openid-connect/certs
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
 
 springdoc:
   api-docs:
