--- a/src/main/resources/application-qa.yml
+++ b/src/main/resources/application-qa.yml
@@ -13,8 +13,18 @@ spring:
       host: cache
   security:
     oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://26.44.49.6:8081/realms/tpm
+            user-info-uri: http://26.44.49.6:8081/realms/tpm/protocol/openid-connect/userinfo
+            jwk-set-uri: http://26.44.49.6:8081/realms/tpm/protocol/openid-connect/certs
+            authorization-uri: http://26.44.49.6:8081/realms/tpm/protocol/openid-connect/auth
+            token-uri: http://26.44.49.6:8081/realms/tpm/protocol/openid-connect/token
+            user-name-attribute: preferred_username
       resourceserver:
         jwt:
+          issuer-uri: http://26.44.49.6:8081/realms/tpm
           jwk-set-uri: http://26.44.49.6:8081/realms/tpm/protocol/openid-connect/certs
 
 server:
